recyclerview checkbox 기능 추가

--- a/app/src/main/res/navigation/my_navi.xml
+++ b/app/src/main/res/navigation/my_navi.xml
@@ -22,10 +22,10 @@
             android:id="@+id/action_listFragment_to_updateFragment"
             app:destination="@id/updateFragment"
             app:popEnterAnim="@anim/nav_default_enter_anim"
-            app:popExitAnim="@anim/nav_default_exit_anim"
-           app:popUpTo="@+id/listFragment"
-            app:popUpToInclusive="true"
-             />
+            app:popExitAnim="@anim/nav_default_exit_anim"      />
+           <!--app:popUpTo="@+id/listFragment"
+            app:popUpToInclusive="true"-->
+
         <argument
             android:name="currentUser"
             app:argType="pol3436.test.mvvmrecycler.model.User" />
